fix function list overflow

--- a/public/index.css
+++ b/public/index.css
@@ -322,7 +322,6 @@ html, body {
 
 #function_list {
   color: white;
-  overflow: auto;
   border-bottom: .1rem solid #3f3f3f;
   font-family: monospace;
 }
@@ -331,6 +330,8 @@ html, body {
   #function_list {
     border-right: .1rem solid #3f3f3f;
     border-bottom: none;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
 
@@ -359,10 +360,12 @@ html, body {
   overflow: auto;
   padding: 1rem;
   padding-top: 0;
+  max-height: 100px;
 }
 
 @media screen and (min-width: 768px) {
   #function_list > :nth-child(3) {
+    max-height: inherit;
     flex-direction: column;
   }
 }
